--- a/packages/frontend-2/package.json
+++ b/packages/frontend-2/package.json
@@ -44,7 +44,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@graphql-codegen/cli": "^2.13.6",
     "@graphql-codegen/client-preset": "^1.0.6",
-    "@nuxtjs/tailwindcss": "^5.3.5",
+    "@nuxtjs/tailwindcss": "^6.0.1",
     "@storybook/addon-a11y": "^7.0.0-alpha.42",
     "@storybook/addon-docs": "^7.0.0-alpha.42",
     "@storybook/addon-essentials": "^7.0.0-alpha.42",
@@ -75,6 +75,7 @@
     "eslint-plugin-vuejs-accessibility": "^1.2.0",
     "jest": "27",
     "nuxt": "3.0.0-rc.11",
+    "postcss": "latest",
     "postcss-html": "^1.5.0",
     "postcss-nesting": "^10.2.0",
     "prettier": "^2.7.1",
@@ -84,6 +85,7 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^26.0.0",
+    "tailwindcss": "^3.2.1",
     "type-fest": "^2.13.1",
     "typescript": "^4.8.3",
     "vue-tsc": "^1.0.8"
